--- a/ExViewer/Views/CachePage.xaml
+++ b/ExViewer/Views/CachePage.xaml
@@ -52,7 +52,8 @@
                              RelativePanel.AlignRightWithPanel="True"
                              RelativePanel.Below="cb_top"
                              RefreshInvoked="PullToRefreshBox_RefreshInvoked"
-                             RefreshThreshold="60">
+                             RefreshThreshold="60"
+                             Background="{StaticResource ApplicationPageBackgroundThemeBrush}">
             <pr:PullToRefreshBox.TopIndicatorTemplate>
                 <DataTemplate>
                     <pr:PullRefreshProgressControl Progress="{Binding}"
@@ -173,13 +174,15 @@
                     <TextBlock HorizontalAlignment="Center"
                                Margin="12"
                                Style="{StaticResource BaseTextBlockStyle}"
-                               Visibility="{x:Bind VM.CachedGalleries.HasMoreItems, FallbackValue=Visible, Converter={StaticResource TrueToVisibleConverter}, Mode=OneWay}">Loading more galleries...</TextBlock>
+                               Visibility="{x:Bind VM.CachedGalleries.HasMoreItems, FallbackValue=Visible, Converter={StaticResource TrueToVisibleConverter}, Mode=OneWay}"
+                               Text="Loading more galleries..." />
                 </ListView.Footer>
                 <ListView.Header>
                     <TextBlock HorizontalAlignment="Center"
                                Margin="12"
                                Style="{StaticResource BaseTextBlockStyle}"
-                               Visibility="{x:Bind VM.CachedGalleries.Count, Mode=OneWay, Converter={StaticResource ZeroToVisibleConverter}, FallbackValue=Collapsed}">No cached galleries</TextBlock>
+                               Visibility="{x:Bind VM.CachedGalleries.Count, Mode=OneWay, Converter={StaticResource ZeroToVisibleConverter}, FallbackValue=Collapsed}"
+                               Text="No cached galleries" />
                 </ListView.Header>
             </ListView>
         </pr:PullToRefreshBox>
