--- a/ExViewer/Views/RootControl.xaml
+++ b/ExViewer/Views/RootControl.xaml
@@ -1,13 +1,13 @@
-﻿<UserControl x:Class="ExViewer.Views.RootControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="using:ExViewer"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d"
-             Loaded="Control_Loaded"
-             Unloaded="Control_Unloaded"
-             xmlns:controls="using:ExViewer.Controls">
+﻿<Page x:Class="ExViewer.Views.RootControl"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:local="using:ExViewer"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d"
+      Loaded="Control_Loaded"
+      Unloaded="Control_Unloaded"
+      xmlns:controls="using:ExViewer.Controls">
     <UserControl.Resources>
         <Storyboard x:Key="ShowDisablePanel">
             <DoubleAnimation Duration="0:0:0.5"
@@ -123,4 +123,4 @@
                          LargeChange="0.01" />
         </RelativePanel>
     </Grid>
-</UserControl>
+</Page>
